--- a/tracy.cabal
+++ b/tracy.cabal
@@ -13,7 +13,13 @@ cabal-version:         >= 1.8
 
 executable tracy
   main-is:             Main.hs
-  other-modules:       Graphics.Tracy.V3
+  other-modules:       Graphics.Tracy.Light
+                       Graphics.Tracy.Material
+                       Graphics.Tracy.Prim
+                       Graphics.Tracy.Scene
+                       Graphics.Tracy.Traceable
+                       Graphics.Tracy.Tracer
+                       Graphics.Tracy.V3
 
   build-depends:       base        == 4.5.*
                      , random      == 1.0.*
@@ -21,14 +27,21 @@ executable tracy
                      , JuicyPixels == 3.*
 
   hs-source-dirs:      src
-
+  ghc-options:         -O2 -Wall
 
 
 library
-  exposed-modules:     Graphics.Tracy.V3
+  exposed-modules:     Graphics.Tracy.Light
+                       Graphics.Tracy.Material
+                       Graphics.Tracy.Prim
+                       Graphics.Tracy.Scene
+                       Graphics.Tracy.Traceable
+                       Graphics.Tracy.Tracer
+                       Graphics.Tracy.V3
 --  other-modules:
 
   build-depends:       base        == 4.5.*
                      , random      == 1.0.*
 
   hs-source-dirs:      src
+  ghc-options:         -O2 -Wall
