--- a/tracy.cabal
+++ b/tracy.cabal
@@ -27,7 +27,7 @@ executable tracy
                      , JuicyPixels == 3.*
 
   hs-source-dirs:      src
-  ghc-options:         -O2 -Wall
+  ghc-options:         -Wall -rtsopts -O2 -fllvm
 
 
 library
@@ -38,7 +38,6 @@ library
                        Graphics.Tracy.Traceable
                        Graphics.Tracy.Tracer
                        Graphics.Tracy.V3
---  other-modules:
 
   build-depends:       base        == 4.5.*
                      , random      == 1.0.*
