--- a/tracy.cabal
+++ b/tracy.cabal
@@ -20,15 +20,12 @@ executable tracy
                        Graphics.Tracy.Traceable
                        Graphics.Tracy.Tracer
                        Graphics.Tracy.V3
-
-  build-depends:       base        == 4.5.*
-                     , random      == 1.0.*
-                     , filepath    == 1.3.0.*
-                     , JuicyPixels == 3.*
-
+  build-depends:       base        >= 4.5
+                     , random      >= 1.0
+                     , filepath    >= 1.3.0
+                     , JuicyPixels >= 3
   hs-source-dirs:      src
   ghc-options:         -Wall -O2
-
 
 library
   exposed-modules:     Graphics.Tracy.Light
@@ -38,9 +35,6 @@ library
                        Graphics.Tracy.Traceable
                        Graphics.Tracy.Tracer
                        Graphics.Tracy.V3
-
-  build-depends:       base        == 4.5.*
-                     , random      == 1.0.*
-
+  build-depends:       base, random
   hs-source-dirs:      src
   ghc-options:         -O2 -Wall
