--- a/tracy.cabal
+++ b/tracy.cabal
@@ -11,16 +11,6 @@ category:              Graphics
 build-type:            Simple
 cabal-version:         >= 1.8
 
-executable tracy
-  main-is:             Main.hs
-  build-depends:       base        >= 4.5
-                     , tracy
-                     , random      >= 1.0
-                     , filepath    >= 1.3.0
-                     , JuicyPixels >= 3
-  hs-source-dirs:      src
-  ghc-options:         -Wall -O2
-
 library
   exposed-modules:     Graphics.Tracy.Light
                        Graphics.Tracy.Material
@@ -28,6 +18,19 @@ library
                        Graphics.Tracy.Scene
                        Graphics.Tracy.Tracer
                        Graphics.Tracy.V3
-  build-depends:       base, random
+  build-depends:       base   >= 4.6
+                     , random >= 1.0
+                     , data-default
+  hs-source-dirs:      src
+  ghc-options:         -O2 -Wall
+
+executable tracy
+  main-is:             Main.hs
+  build-depends:       base
+                     , tracy
+                     , random
+                     , data-default
+                     , filepath    >= 1.3.0
+                     , JuicyPixels >= 3
   hs-source-dirs:      src
   ghc-options:         -O2 -Wall
