--- a/tracy.cabal
+++ b/tracy.cabal
@@ -1,27 +1,27 @@
 name:                  tracy
 version:               0.1.0.0
-synopsis:              Simple ray tracer.
-description:           Simple ray tracer.
 license:               MIT
 license-file:          LICENSE
-author:                Sam T.
-maintainer:            Sam T. <pxqr.sta@gmail.com>
-copyright:
+author:                Sam Truzjan
+maintainer:            Sam Truzjan <pxqr.sta@gmail.com>
+copyright:             (c) 2013-2014 Sam Truzjan
 category:              Graphics
 build-type:            Simple
 cabal-version:         >= 1.8
+synopsis:              A simple ray tracer.
+description:           A simple ray tracer.
 
 library
+  hs-source-dirs:      src
   exposed-modules:     Graphics.Tracy.Light
                        Graphics.Tracy.Material
-                       Graphics.Tracy.Prim
+                       Graphics.Tracy.Geometry
                        Graphics.Tracy.Scene
                        Graphics.Tracy.Tracer
                        Graphics.Tracy.V3
   build-depends:       base   >= 4.6
                      , random >= 1.0
                      , data-default
-  hs-source-dirs:      src
   ghc-options:         -O2 -Wall
 
 executable tracy
