--- a/tracy.cabal
+++ b/tracy.cabal
@@ -7,15 +7,17 @@ maintainer:            Sam Truzjan <pxqr.sta@gmail.com>
 copyright:             (c) 2013-2014 Sam Truzjan
 category:              Graphics
 build-type:            Simple
-cabal-version:         >= 1.8
+cabal-version:         >= 1.10
 synopsis:              A simple ray tracer.
 description:           A simple ray tracer.
 
 library
+  default-language:    Haskell2010
   hs-source-dirs:      src
   exposed-modules:     Graphics.Tracy.Light
                        Graphics.Tracy.Material
                        Graphics.Tracy.Geometry
+                       Graphics.Tracy.Object
                        Graphics.Tracy.Scene
                        Graphics.Tracy.Tracer
                        Graphics.Tracy.V3
