--- a/tracy.cabal
+++ b/tracy.cabal
@@ -13,26 +13,31 @@ description:           A simple ray tracer.
 
 library
   default-language:    Haskell2010
+  default-extensions:  PatternGuards
   hs-source-dirs:      src
-  exposed-modules:     Graphics.Tracy.Light
+  exposed-modules:     Graphics.Tracy.Color
+                       Graphics.Tracy.Light
                        Graphics.Tracy.Material
                        Graphics.Tracy.Geometry
                        Graphics.Tracy.Object
                        Graphics.Tracy.Scene
-                       Graphics.Tracy.Tracer
+                       Graphics.Tracy.Render
                        Graphics.Tracy.V3
   build-depends:       base   >= 4.6
                      , random >= 1.0
+                     , mtl
                      , data-default
   ghc-options:         -O2 -Wall
 
 executable tracy
+  default-language:    Haskell2010
+  hs-source-dirs:      src
   main-is:             Main.hs
   build-depends:       base
                      , tracy
                      , random
+                     , mtl
                      , data-default
                      , filepath    >= 1.3.0
                      , JuicyPixels >= 3
-  hs-source-dirs:      src
   ghc-options:         -O2 -Wall
